syntax = "proto3";

package prutal;

option go_package = "./prutal";

message TestofNestedMessage {
  bool field1 = 1;
}

message TestOneofMessage {
  oneof one_of_field_a {
    bool field1 = 1;
    int64 field2 = 2;
  }

  oneof one_of_field_b {
    int32 field3 = 3;
    string field4 = 4;
  }

  oneof one_of_field_c {
    TestofNestedMessage field5 = 5;
  }

}
